--- a/pacientes.html
+++ b/pacientes.html
@@ -8,49 +8,37 @@
     <title>Document</title>
 </head>
 <body>
-    <header>CENTRO MEDICO  </header>
-    <nav id="navegar">
+<header>CENTRO MEDICO</header>
+<nav id="navegar">
     <button class="boton"><a href="Registro_medicos.html" target="_blank">REGISTRO DE MEDICOS</a></button>
     <button class="boton"><a href="Registro_pacientes.html" target="_blank">REGISTRO DE PACIENTES </a></button>
-    <button class="boton"><a href="pacientes.html" target="_blank">LISTA DE PACIENTES</a></button>
+    <button class="boton"><a href="medicos.html" target="_blank">LISTA DE MEDICOS</a></button>
     <button class="boton"><a href="index.html" target="_blank">INICIO DE LA PAGINA</a></button>
 
 
     </nav>
-    <main class="contenedor-tabla">
-    <table id="tabla-medicos">
-     <h2>LISTADO MEDICO </h2>
-    <thead>
-        <tr>
-        <th>Nombre</th>
-        <th>Apellido</th>
-        <th>Numero cedula</th>
-        <th>Especialidad</th>
-        <th>Consultorio</th>
-        <th>Correo electronico</th>
-        </tr>
-        </thead>
->        <tbody>
-
-
-
-        </tbody>
-
-
-
-    </thead>
-
-
-
-
-
-    </table>
-
-
-
-    </main>
-    <script src="medicos.js"></script>
+<main class="contenedor-tabla">
+<table id="tabla-pacientes">
+<h2>LISTADO DE PACIENTES</h2>
+<thead>
     
-</body>
+ <tr> 
+    <th>Nombre</th>
+    <th>Apellido</th>
+    <th>Cedula</th>
+    <th>Edad</th>
+    <th>Telefono</th>
+    <th>Especialidad</th>
 
+
+ </tr>
+</thead>
+<tbody>
+
+
+</tbody>
+</table>
+</main>
+<script src="pacientes.js"></script>
+</body>
 </html>
