--- a/Registro_medicos.html
+++ b/Registro_medicos.html
@@ -11,6 +11,14 @@
     <header>
         Registro de medicos
     </header>
+    <nav id="navegar">
+        <button class="boton"><a href="Registro_pacientes.html" target="_blank">REGISTRO DE PACIENTES</a></button>
+        <button class="boton"><a href="pacientes.html" target="_blank">LISTADO PACIENTES </a></button>
+        <button class="boton"><a href="medicos.html" target="_blank">LISTA DE MEDICOS</a></button>
+        <button class="boton"><a href="index.html" target="_blank">INICIO DE LA PAGINA</a></button>
+    
+    
+        </nav>
     <div class="container">
     <main class="contenido">
     <form id="registro_medicos">
