--- a/Registro_pacientes.html
+++ b/Registro_pacientes.html
@@ -9,6 +9,12 @@
 </head>
 <body>
     <header>REGISTRO DE PACIENTES</header>
+    <nav id="navegar">
+    <button class="boton"><a href="Registro_medicos.html" target="_blank">REGISTRO DE MEDICOS</a></button>
+    <button class="boton"><a href="Registro_pacientes.html" target="_blank">LISTA DE MEDICOS </a></button>
+    <button class="boton"><a href="pacientes.html" target="_blank">LISTA DE PACIENTES</a></button>
+    <button class="boton"><a href="index.html" target="_blank">INICIO DE LA PAGINA</a></button> 
+    </nav>
 <div class="container">
 
  <main class="contenido">
